.provarCaches/00D410000011HE0EAM/objects/rstk__fcstday__c.object
<CustomObject>
    <description>fcstday__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__fcstday_date__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__fcstday_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Consolidated Daily Forecasts</relationshipLabel>
        <relationshipName>fcstdays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fcstday_doiadjqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DOI Adjustment Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstday_doiqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DOI Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstday_forecastqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity used for Forecast</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstday_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Consolidated Daily Forecasts</relationshipLabel>
        <relationshipName>fcstdays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fcstday_month__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Month</label>
        <referenceTo>rstk__fcstmonth__c</referenceTo>
        <relationshipLabel>Consolidated Daily Forecasts</relationshipLabel>
        <relationshipName>fcstdays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fcstday_procseq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Process Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstday_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Daily Forecast Allocation</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstday_qtyavg__c</fullName>
        <formula>rstk__fcstday_month__r.rstk__fcstmonth_qty__c / rstk__fcstday_month__r.rstk__fcstmonth_days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monthly Forecast amount evenly divided by the number of days in the Forecast Month</inlineHelpText>
        <label>Average Forecast Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstday_tslqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>TSL Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__fcstday_div__r.rstk__sydiv_div__c +  rstk__fcstday_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c + TEXT( rstk__fcstday_date__c ) + TEXT( rstk__fcstday_procseq__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__fcstday_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c + &apos; (&apos; + TEXT( rstk__fcstday_date__c ) + &apos;) &apos; + TEXT( rstk__fcstday_procseq__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Consolidated Daily Forecast</label>
    <listViews>
        <fullName>rstk__RS_Consolidated_Daily_Forecasts</fullName>
        <columns>NAME</columns>
        <columns>rstk__fcstday_div__c</columns>
        <columns>rstk__fcstday_month__c</columns>
        <columns>rstk__fcstday_date__c</columns>
        <columns>rstk__fcstday_procseq__c</columns>
        <columns>rstk__fcstday_forecastqty__c</columns>
        <columns>rstk__fcstday_qty__c</columns>
        <columns>rstk__fcstday_doiqty__c</columns>
        <columns>rstk__fcstday_doiadjqty__c</columns>
        <columns>rstk__fcstday_tslqty__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Consolidated Daily Forecasts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consolidated Daily Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Day_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( rstk__fcstday_date__c )</errorConditionFormula>
        <errorMessage>Day is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Division_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( rstk__fcstday_div__c )</errorConditionFormula>
        <errorMessage>Division is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Item_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( rstk__fcstday_icitem__c )</errorConditionFormula>
        <errorMessage>Inventory Item is required</errorMessage>
    </validationRules>
</CustomObject>